zeit.objectlog changes
======================

0.6 (unreleased)
----------------

0.5 (2008-07-10)
----------------

- Removed the global timeline as it is a conflict hotspot.

0.4 (2008-07-08)
----------------

- Fixed display of times in LogEntrySource: Times are now in the timezone
  defined by an adapter from request to ITZInfo (bug #4314).

0.3 (2008-06-05)
----------------

- The terms do not break when a principal is deleted (bug #4146).

0.2 (2008-04-28)
----------------

- Allow logging wich interaction but without principal. Required for logging in
  lovely.remotetask.
- Creating savepoint after creating a log entry, otherwise there are some
  problems with using the logentry in the same transaction.

0.1 (2008-04-21)
----------------

- first release
